# mcp2cli

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp2cli/: __init__.py  __main__.py
tests/: _mcp_http_server.py  conftest.py  mcp_test_server.py  test_helpers.py  test_mcp.py  test_oauth.py  test_openapi.py  test_usage.py
