[project]
name = "mcp2cli"
version = "1.3.0"
description = "Turn any MCP server or OpenAPI spec into a CLI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Stephan Fitzpatrick", email = "stephan@knowsuchagency.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "mcp>=1.0",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "tiktoken"]

[project.urls]
Homepage = "https://github.com/knowsuchagency/mcp2cli"
Repository = "https://github.com/knowsuchagency/mcp2cli"

[project.scripts]
mcp2cli = "mcp2cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
